user-management-deploy-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: gantry-user-management
  labels:
    app: user
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: harbor.dev.gantry.ai/gantry/user-management-service:0.1
        ports:
        - containerPort: 9090
      imagePullSecrets:
      - name: harbor-secret
