user-management-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: gantry-user-management
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      serviceAccountName: user-management-account
      containers:
      - name: user
        image: harbor.dev.gantry.ai/gantry/user-management:0.1
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: harbor-secret
